# SmartCalc_v2.0

./: README.md
src/: Makefile  dvi.txt  test.cc
src/Calculator/: CMakeLists.txt  CMakeLists.txt.user.3ad17db  annuietet.ui  credit.cc  credit.h  credit.ui  differ.ui  form.ui  graph.cc  graph.h  graph.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  my_smartcalc.cc  my_smartcalc.h
